inc/css/base.css
body{
	background-color:#e2e2e2;
}
header{
	width:100%;
	position:fixed;
	height:50px;
	background-color:#ccc;
	overflow:hidden;
	z-index:2;
	box-sizing:border-box;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-direction: row-reverse;
}
nav > ul > li{
  display: inline-block;
  padding: .25em .5em;
  background-color: rgb(235,235,235);
}
li{
  list-style-type: none;
}

.page-content{
	padding-top:50px;
}

.page-content .main-carousel{
	width:100vw;
	height:400px;
	overflow:hidden;
	position:relative;
	z-index:1;
}

.page-content .main-carousel .carousel-next,
.page-content .main-carousel .carousel-prev{
	position:absolute;
	top:50%;
	padding:20px;
	background-color:rgba(200,200,200,1);
	cursor:pointer;
	margin-top:-25px;
}

.page-content .main-carousel .carousel-next{
	right:0;
}

.page-content .main-carousel .carousel-prev{
	left:0;
}

.page-content .main-carousel .carousel-cells{
	width:99999px;
	height:100%;

}

.page-content .main-carousel .carousel-cells article{
	width:100vw;
	height:100%;
	float:left;
	display:flex;
}

.slide-text{
  margin: auto;
}

.carousel-cells{
  text-align: center;
  background-color: white;
}

.three-columns{
  -webkit-column-count:4;
}

.list-block{
  -webkit-column-break-inside: avoid;
}

@media only screen and (max-width: 767px) {
  .three-columns{
      -webkit-column-count:3;
  }
}

.column-content{
  background-color: rgb(237,237,237);
  overflow: hidden;
  margin-bottom: 3em;
  padding: 1em;
}

h1{
  font-size: 2em;
  margin: .67em 0;
}

h2{
  font-size: 1.5em;
  padding-left: .5em;
}

h3{
  font-size: 1.17em;
  margin-bottom: .83em;
}

